--- a/_posts/2019-02-10-php文件包含.md
+++ b/_posts/2019-02-10-php文件包含.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "File Include"
-description: "A Summary of File Inclusion."
+title: "php文件包含"
+description: "php 文件包含整理"
 categories: [fileInclude]
-tags: [summary,web]
+tags: [php,web]
 redirect_from:
   - /2019/02/10/
 ---
@@ -322,7 +322,7 @@ index.php?file=zip://D:\phpStudy\WWW\fileinclude\chybeta.zip%23chybeta
 ### 长度截断
 
 利用条件：
- 
+
 php版本小于5.2.8
 
 目录字符串，在linux下4096字节时会达到最大值，在window下是256字节。只要不断的重复`./`，则后缀`/test/test.php`，在达到最大值后会被直接丢弃掉。
